# aergias

./: README.md  pyproject.toml
aergia/: __main__.py  lexer.py  nodes.py  parser.py
docs/: _config.yml  comments.md  controlflow.md  examples.md  io.md  modules.md  operations.md  values.md  variables.md
editors/vscode/: README.md  language-configuration.json  package.json
editors/vscode/syntaxes/: aergia.tmLanguage.json
